Fix issue with modal background on mobile devices

--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -61,8 +61,8 @@ div.modal {
   z-index: 1;
   left: 0;
   top: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   overflow: auto;
   background-color: rgba(0,0,0,0.4);
   cursor: pointer;
